kubernetes/apps/default/obsidian-livesync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: obsidian-livesync
  labels:
    app: obsidian-livesync
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5984
      targetPort: http
      protocol: TCP
  selector:
    app: obsidian-livesync
